fix general section spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -162,7 +162,6 @@ input[type=checkbox] {
 main {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     height: 100%;
     z-index: 2;
 }
@@ -172,6 +171,10 @@ main {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 30px;
+}
+
+.general div {
+    flex: 1;
 }
 
 .projects {
